--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello!</title>
+        <title>Pubquiz</title>
     </head>
     <body>
-        <h1>Welcome to my first website!</h1>
+        <h1>Welcome to my one and only pubquiz!</h1>
+        <h2>Do you want to test your knowledge? This is your chance!</h2>
     </body>
 <html>
