Add description pubquiz

--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <body>
         <h1>Welcome to my one and only pubquiz!</h1>
         <h2>Do you want to test your knowledge? This is your chance!</h2>
+        
+        How does this pubquiz work?
+        <ol>
+            <li>Read the question carefully</li>
+            <li>Click on the answer that you think is right</li>
+            <li>The answer will lead you to a website, which will give you feedback on your answer</li>
+            <li>You can try again untill you get the right answer!</li>
+        </ol>
     </body>
 <html>
