--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>Pubquiz</title>
+        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Welcome to my one and only pubquiz!</h1>
