--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
             <li>The answer will lead you to a website, which will give you feedback on your answer</li>
             <li>You can try again untill you get the right answer!</li>
         </ol>
+        
+        Question 1:
+        <table>
+            <tbody>
+                <tr>
+                    <td>41</td>
+                    <td>43</td>
+                    <td>47</td>
+                    <td>53</td>
+                    <td>59</td>
+                    <td>???</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 <html>
