--- a/correct_answer1.html
+++ b/correct_answer1.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Congratulations!</title>
+    </head>
+    <body>
+        <h1>You selected the right answer!</h1>
+        
+        <img src="good.jpeg" alt="Thumbs up">
+    </body>
+<html>
