--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Pubquiz</title>
         
+        <img src="pubquiz.jpg" alt="pubquiz logo">
+        
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
