--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <img src="pubquiz.jpg" alt="pubquiz logo">
+        <img src="Documenten/Uni/pubquiz.jpg" alt="pubquiz logo">
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
