--- a/correct_answer1.html
+++ b/correct_answer1.html
@@ -7,5 +7,7 @@
         <h1>You selected the right answer!</h1>
         
         <img src="good.jpeg" alt="Thumbs up">
+        
+        <a href="index.html">Go back to pubquiz</a>
     </body>
 <html>
