--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <img src="Documenten/Uni/pubquiz.jpg" alt="pubquiz logo">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.foodiesenzo.nl%2Factiviteiten%2Fpubquiz-spek-bonen%2F&psig=AOvVaw2QUOlbkjKa74zSYEecoY6Q&ust=1644581675263000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPia9KaO9fUCFQAAAAAdAAAAABAJ" alt="pubquiz logo">
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
