--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <img src="https://github.com/Michellebors/Michellebors.github.io/issues/1#issue-1129970444" alt="pubquiz logo">
+        <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" alt="pubquiz logo">
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
