--- a/correct_answer1.html
+++ b/correct_answer1.html
@@ -6,7 +6,7 @@
     <body>
         <h1>You selected the right answer!</h1>
         
-        <img src="good.jpeg" alt="Thumbs up">
+        <img src="https://user-images.githubusercontent.com/90379617/153409057-9b2e4ed2-7eae-4935-ab0c-3d986def85b1.jpg" alt="Thumbs up">
         
         <a href="index.html">Go back to pubquiz</a>
     </body>
