--- a/wrong_answer1.html
+++ b/wrong_answer1.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Try again...</title>
+    </head>
+    <body>
+        <h1>You selected the wrong answer</h1>
+        
+        <img src="" alt="Fail">
+        
+        <a href="index.html">Go back to pubquiz to try again</a>
+    </body>
+<html>
