--- a/wrong_answer1.html
+++ b/wrong_answer1.html
@@ -6,7 +6,7 @@
     <body>
         <h1>You selected the wrong answer</h1>
         
-        <img src="" alt="Fail">
+        <img src="https://user-images.githubusercontent.com/90379617/153409805-7a1fab5b-4dcc-4b66-a15b-6b80c7a811a8.jpg" alt="Wrong answer">
         
         <a href="index.html">Go back to pubquiz to try again</a>
     </body>
