--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" height="200px" width="1250px" alt="pubquiz logo">
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
@@ -13,6 +12,8 @@
             }
     </head>
     <body>
+        <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" alt="pubquiz logo" class="responsive">    
+            
         <div class="position">
             <h1>Welcome to my one and only pubquiz!</h1>
             <h2>Do you want to test your knowledge? This is your chance!</h2>
