--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             }
     </head>
     <body>
-        <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" alt="pubquiz logo" class="responsive">    
+        <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" widht="1150px" heigth="200px" alt="pubquiz logo">    
             
         <div class="position">
             <h1>Welcome to my one and only pubquiz!</h1>
