--- a/good_answer2.html
+++ b/good_answer2.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Congratulations!</title>
+    </head>
+    <body>
+        <h1>You selected the right answer!</h1>
+        
+        <img src="" alt="Thumbs up">
+        
+        <a href="index.html">Go back to pubquiz</a>
+    </body>
+<html>
