--- a/good_answer2.html
+++ b/good_answer2.html
@@ -6,7 +6,7 @@
     <body>
         <h1>You selected the right answer!</h1>
         
-        <img src="" alt="Thumbs up">
+        <img src="https://user-images.githubusercontent.com/90379617/153577653-623dc680-22dd-4bf4-aa28-598b60df6495.png" alt="Guz and Jaq">
         
         <a href="index.html">Go back to pubquiz</a>
     </body>
