--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li>You can try again untill you get the right answer!</li>
         </ol>
         
-        <p>Question 1:
+        <p class="bass">Question 1:
         
         <table>
            <tbody>
