--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </table></p>
         
         <p id="foo">Select the right answer:
-        <ul>
+        <ul id="foo">
             <li><a href="correct_answer1.html">61</a></li>
             <li><a href="wrong_answer1.html">62</a></li>
             <li><a href="wrong_answer1.html">63</a></li>
