--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
-        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>            
         <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" widht="1350px" heigth="150px" alt="pubquiz logo">
