--- a/correct_answer1.html
+++ b/correct_answer1.html
@@ -4,6 +4,10 @@
         <title>Congratulations!</title>
     </head>
     <body>
+        <div class="alert alert-success" role="alert">
+            Good job!
+        </div>
+        
         <h1>You selected the right answer!</h1>
         
         <img src="https://user-images.githubusercontent.com/90379617/153409057-9b2e4ed2-7eae-4935-ab0c-3d986def85b1.jpg" alt="Thumbs up">
