--- a/good_answer2.html
+++ b/good_answer2.html
@@ -4,6 +4,10 @@
         <title>Congratulations!</title>
     </head>
     <body>
+        <div class="alert alert-success" role="alert">
+            Good job!
+        </div>
+        
         <h1>You selected the right answer!</h1>
         
         <img src="https://user-images.githubusercontent.com/90379617/153577653-623dc680-22dd-4bf4-aa28-598b60df6495.png" width="200px" heigth="200px" alt="Guz and Jaq">
