--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
-    <body>            
+    <body>
         <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" widht="1350px" heigth="150px" alt="pubquiz logo">
             
         <h1>Welcome to my one and only pubquiz!</h1>
@@ -49,5 +49,17 @@
             <li><a href="good_answer2.html">Cinderella</a></li>
             <li><a href="wrong_answer1.html">Ariel</a></li>
         </ul></p>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    This is a section.
+                </div>
+                <div class="col-6">
+                    This is another section.
+                </div>
+            </div>
+        </div>
+        </br>
     </body>
 <html>
