--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                             </tbody>
                         </table>
                     <ul id="foo">
-                        <li><a href="correct_answer1.html">61</a></li>
-                        <li><a href="wrong_answer1.html">62</a></li>
-                        <li><a href="wrong_answer1.html">63</a></li>
-                        <li><a href="wrong_answer1.html">64</a></li>
+                        <li><a href="correct_answer.html">61</a></li>
+                        <li><a href="wrong_answer.html">62</a></li>
+                        <li><a href="wrong_answer.html">63</a></li>
+                        <li><a href="wrong_answer.html">64</a></li>
                     </ul>
                 </div>
                 <div class="col-6">
                     Question 2: Which Disney Princess called Gus and Jaq friends?
         
                     <ul id="foo">
-                        <li><a href="wrong_answer1.html">Snow White</a></li>
-                        <li><a href="wrong_answer1.html">Belle</a></li>
-                        <li><a href="good_answer2.html">Cinderella</a></li>
-                        <li><a href="wrong_answer1.html">Ariel</a></li>
+                        <li><a href="wrong_answer.html">Snow White</a></li>
+                        <li><a href="wrong_answer.html">Belle</a></li>
+                        <li><a href="good_answer.html">Cinderella</a></li>
+                        <li><a href="wrong_answer.html">Ariel</a></li>
                     </ul>
                 </div>
             </div>
