--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Pubquiz</title>
         
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet2" href="style2.css">
+        <link rel="stylesheet2" href="style2.scss">
         <link rel="stylesheet3" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
