--- a/instructions.html
+++ b/instructions.html
@@ -1,1 +1,10 @@
-<DOCTYPE
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Instructions</title>
+    </head>
+    <body>
+        
+        <a href="index.html">Go back to pubquiz</a>
+    </body>
+<html>
