--- a/instructions.html
+++ b/instructions.html
@@ -4,6 +4,12 @@
         <title>Instructions</title>
     </head>
     <body>
+        How does this pubquiz work?
+            <ol>
+                <li>Read the question carefully</li>
+                <li>Click on the answer that you think is right</li>
+                <li>You can try again untill you get the right answer!</li>
+            </ol>
         
         <a href="index.html">Go back to pubquiz</a>
     </body>
