--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             
         <h1>Welcome to my one and only pubquiz!</h1>
         <h2>Do you want to test your knowledge? This is your chance!</h2>
+        <h3><a href="instructions.html">For instructions click here</a>
         
         <div class="container">
             <div class="row">
