--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
                 <div class="col-6">
-                    Question 2: Which Disney Princess called Gus and Jaq friends?
+                    Question 2: Which Disney Princess has friends called Gus and Jaq?
         
                     <ul id="foo">
                         <li><a href="wrong_answer.html">Snow White</a></li>
