--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <img src="https://user-images.githubusercontent.com/90379617/153408118-100db8dc-6f30-487d-8040-cec4a4d3f518.jpg" width="1275px" height="300px" alt="pubquiz logo">
             
-        <h1>Welcome to my one and only pubquiz!</h1>
+        <h1 style="text-align: center">Welcome to my one and only pubquiz!</h1>
         <h2>Do you want to test your knowledge? This is your chance!</h2>
         <h3 text-align="center"><a href="instructions.html">For instructions click here</a>
         <br>
