--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             
         <h1 style="text-align: center">Welcome to my one and only pubquiz!</h1>
         <h2 style="text-align: center">Do you want to test your knowledge? This is your chance!</h2>
-        <h3 style="text-align: center"><a href="instructions.html">For instructions click here</a>
+        <h3 class="bass"><a href="instructions.html">For instructions click here</a>
         <br>
         
         <div class="container">
